# DevJobsScraper

./: .env.example  .gitignore  README.md  commands.bat  main.py  pyproject.toml  render.yml  requirements.txt  test.py
backend/: .env.local  database.py  main.py
backend/routes/: jobs.py
data/: jobs.csv  jobs.db
discord-bot/: bot.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Filter.tsx  JobCard.tsx  JobList.tsx
frontend/src/config/: index.ts
frontend/src/types/: job.ts
scraper/: cleaner.py  scraper.py
src/api/: main.py
src/backend/: main.py
src/config/: config.py
src/core/: __init__.py  config.py  database.py  models.py
src/data/: jobs.csv  jobs.db  schema.py  to_csv.py
src/database/: schema.py
src/discord/: bot.py
src/scraper/: cleaner.py  job.py  scarper_emploitic.py  scraper.py  scraper_remoteOK.py  scraping.py
src/scrapers/: __init__.py  base.py  emploitic.py  remoteok.py
src/utils/: cleaner.py
tests/: test_api.py  test_cleaner.py  test_database.py  test_models.py  test_scraper.py
