[project]
name = "scrapeemploitic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.117.1",
    "pandas>=2.3.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "uvicorn>=0.36.0",
    "webdriver-manager>=4.0.2",
]

[tool.uv]
package = true
