[project]
name = "scrapeemploitic"
version = "0.1.0"
description = "Scrape jobs from remoteok and emploitic"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.117.1",
    "pandas>=2.3.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "uvicorn>=0.36.0",
    "webdriver-manager>=4.0.2",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
